FIx for missing bottom margin on mobile for .heroBanner

--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -9,6 +9,7 @@
     position: relative;
     overflow: hidden;
     background: none;
+    margin-bottom: 1em;
 }
 
 .heroImage {
